--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.4.1",
+    "@types/mdx": "^2.0.13",
     "gh-pages": "^6.3.0",
-    "next": "15.2.4",
+    "next": "^15.4.1",
     "next-intl": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
