--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "homepage": "https://adam-salah.github.io/",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
+    "dev": "next dev && next-image-export-optimizer --turbopack",
+    "build": "next build && next-image-export-optimizer",
     "deploy": "npm run build && touch ./out/.nojekyll && gh-pages -d out -t",
     "start": "npx serve@latest out",
     "lint": "next lint"
@@ -17,10 +17,12 @@
     "@types/mdx": "^2.0.13",
     "gh-pages": "^6.3.0",
     "next": "^15.4.1",
+    "next-image-export-optimizer": "^1.19.0",
     "next-intl": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-markdown": "^10.1.0"
+    "react-markdown": "^10.1.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
