--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/sitemap": "^3.5.1",
+    "@astrojs/sitemap": "^3.6.0",
     "@astrojs/ts-plugin": "^1.10.4",
-    "@fontsource/golos-text": "^5.2.6",
-    "@fontsource/major-mono-display": "^5.2.7",
-    "@fontsource/red-hat-mono": "^5.2.6",
+    "@fontsource/golos-text": "^5.2.8",
+    "@fontsource/major-mono-display": "^5.2.8",
+    "@fontsource/red-hat-mono": "^5.2.8",
     "@tailwindcss/vite": "^4.1.13",
-    "astro": "^5.13.7",
+    "astro": "^5.13.8",
     "locomotive-scroll": "5.0.0-beta.21",
-    "motion": "^12.23.12",
-    "sharp": "^0.34.3",
+    "motion": "^12.23.14",
+    "sharp": "^0.34.4",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "sonda": "^0.9.0"
   }
 }
