--- a/package.json
+++ b/package.json
@@ -15,14 +15,12 @@
     "@fontsource/major-mono-display": "^5.2.8",
     "@fontsource/red-hat-mono": "^5.2.8",
     "@tailwindcss/vite": "^4.1.13",
-    "astro": "^5.13.8",
-    "locomotive-scroll": "5.0.0-beta.21",
-    "motion": "^12.23.14",
+    "astro": "^5.13.9",
+    "motion": "^12.23.16",
     "sharp": "^0.34.4",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.16",
-    "sonda": "^0.9.0"
+    "@tailwindcss/typography": "^0.5.18"
   }
 }
